[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-ml"
version = "0.6.2-rc.18"
description = "Nodetool ML nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.2-rc.18",
    # ML dependencies
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",
]

[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.2-rc.18"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = ["src/nodetool/package_metadata/nodetool-lib-ml.json", "package_metadata/nodetool-lib-ml.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-ignore = ["E402", "F401", "F811", "F821", "F841"]
