[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-ml"
version = "0.6.3-rc.31"
description = "Nodetool ML nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.3-rc.31",
    # ML dependencies
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",
]

[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.3-rc.31"]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "freezegun>=1.5.1",
    "moto>=5.0.3",
    "black>=24.10.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.4",
]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-ignore = ["E402", "F401", "F811", "F821", "F841"]
